* README - even more "compilation copyright" clarification.
git-svn-id: http://svn.pugscode.org/pugs@10072 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/README
+++ b/README
@@ -14,10 +14,13 @@
 COMPILATION COPYRIGHT DISCAIMER
 -------------------------------
 
-The author disclaims copyright for the compilation of the Pugs distribution.
+The author disclaims copyright for the act of compilation of the Pugs
+distribution.  If you want to redistribute part of this distribution, the
+author imposes no additional restrictions beyond the copyright licenses
+imposed in those parts of the distribution.
 
 The Pugs distribution contains copyrighted contributions from third-party
-projects, under their own licenses cited below.
+projects, redistributed under their own licenses cited below.
 
 COPYRIGHTED WORKS FROM THE PUGS PROJECT
 ---------------------------------------
