* S02, 03, 04, 06: Remove all occurrence of "tuple" and replace   it with "Seq".  A "Seq" is simply a List with no laz   y parts (such as Range objects) in it:
    (1,2,3); # Seq


git-svn-id: http://svn.pugscode.org/pugs@23374 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 10 Aug 2004
-  Last Modified: 24 Apr 2006
+  Last Modified: 25 Apr 2006
   Number: 2
-  Version: 32
+  Version: 33
 
 This document summarizes Apocalypse 2, which covers small-scale
 lexical items and typological issues.  (These Synopses also contain
@@ -627,11 +627,11 @@ instance stack multiple types that all must match:
     :(Any Num Dog|Cat $numdog)
 
 Such a signature may be used within another signature to apply
-additional type constraints.  When applied to a tuple argument, the
+additional type constraints.  When applied to a C<Capture> argument, the
 signature allows you to specify the types of parameters that would
 otherwise be untyped:
 
-    :(Any Num Dog|Cat $numdog, MySig *$a ($i,$j,$k,$mousestatus))
+    :(Any Num Dog|Cat $numdog, MySig \$a ($i,$j,$k,$mousestatus))
 
 =item *
 
